@@ -24,6 +24,8 @@ Revision history for {{$dist->name}}
           release test (thanks, Karen Etheridge)
         - all builds now result in a .build/latest symlink (thanks again,
           Karen)
+        - [MetaJSON] is now in [@Basic], with special handling to handle the
+          possibility that the plugin is loaded twice
 
 6.012     2018-04-21 10:20:21+02:00 Europe/Oslo
         - revert addition of Archive::Tar::Wrapper as a mandatory prereq (in
